@@ -3,10 +3,15 @@
 ----------------------------------------------------------------------
 2.0.2 vs. 2.0.1
 
-  3 Enhancements
+  4 Enhancements
   8 Bugfixes
 ----------------------------------------------------------------------
 2.0.1 update 2
+
+  Implemented requests:
+
+  - Support for alpha-3 language codes of ISO 639-2 and 639-3
+  http://sourceforge.net/support/tracker.php?aid=1570557 
 
   Other enhancements:
 
